--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -8,7 +8,8 @@
 	"app.cancelDate":" إلغاء ",
 	"app.show_more":" عرض المزيد ... ",
 	"app.select_all":" الكل ",
-
+	"app.addNewProductsBase":"أصف منتجات جديدة إلى قائمتك",
+	"app.addNewProductsOffer":" أصف من منتجاتك إلى قائمة العرض",
 
 	"app_menu.main":"الرئيسية",
 	"app_menu.main_list":" القائمة الرئيسية ",
@@ -43,6 +44,7 @@
 	"market":"ماركت",
 	"medicine":"صيدليه",
 	"restaurant":"مطعم",
+	"register.logintitle":"تسجيل الدخول",
 	"register.accountname":"إسم الحساب",
 	"register.enteraccountname":"إدخل إسم الحساب",
 	"register.accountnamereq":"إسم الحساب مطلوب",
@@ -79,6 +81,7 @@
 	"login.rememberme":" تذكرنى",
 	"login.forgetpassword":" نسيت كلمة المرور ",
 	"login.submit":"تسجيل الدخول",
+	"login.notcredential":" تسجيل الدخول أو كلمة المرور ليست بيانات اعتماد ",
 	"forgot.loginnotfound":" إسم الدخول غير موجود يرجى التأكد منه ",
 	"forgot.createnewpassword":" إنشاء كلمة مرور جديدة" ,
 	"forgot.note":"يرجى تقديم عنوان البريد الإلكتروني أو رقم الهاتف الذي استخدمته عند التسجيل في حساب الصفقة الخاص بك.",
@@ -151,6 +154,10 @@
 	"accountproduct.addnotallow":"  تم إضافة المنتج من قبل لايسمح بالتكرار",
 	"accountproduct.productaddedtemporary":"تم اضافة هذا المنتج مؤقتا لحين تعديل أسعاره",
 	"accountproduct.accountproductmenu":" منتجاتى",
+	"accountproduct.serial":"مسلسل",
+	"accountproduct.unit_name":" وحدة القياس ",
+	"accountproduct.default_price":"سعر افتراضى",
+	"accountproduct.current_price":"السعر الحالى",
 
 	"accountoffer.off_set_activate":" تفعيل أوقات العرض ",
 	"accountoffer.off_name":"عنوان العرض",
@@ -162,12 +169,12 @@
 	"accountoffer.logooffer":" شعار العرض ",
 	"accountoffer.occasionimage":" شعار المناسبه ",
 	"accountoffer.regoffer":"  تسجيل العرض ",
-	"accountoffer.unit":" الوحدة ",
-	"accountoffer.max_quan":" أقصى كميه ",
-	"accountoffer.max_limit":" الحد الأقصى ",
-	"accountoffer.discount_rate":" نسبة الخصم ",
-	"accountoffer.price":" السعر ",
-	"accountoffer.o_price":" سعر العرض ",
+	"accountoffer.unit":"الوحدة",
+	"accountoffer.max_quan":"ك.العرض",
+	"accountoffer.max_limit":"أقصى.ك",
+	"accountoffer.discount_rate":"الخصم%",
+	"accountoffer.price":"سعر",
+	"accountoffer.o_price":"س.العرض",
 	"accountoffer.save_offer_price":" تسجيل عرض السعر ",
 
 	"CASH":"كاش",
