--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -8,6 +8,8 @@
 	"app.cancelDate":" Cancel ",
 	"app.show_more":" Show more ... ",
 	"app.select_all":" All ",
+	"app.addNewProductsBase":"Add new products to your list",
+	"app.addNewProductsOffer":"Add from your products to offer list",
 
 	"app_menu.main":" Main ",
 	"app_menu.main_list":" Main menu ",
@@ -45,6 +47,7 @@
 	"market":"Market",
 	"medicine":"Medicine",
 	"restaurant":"Restaurant",
+	"register.logintitle":"Log in",
 	"register.accountname":"Account name",
 	"register.enteraccountname":"Enter an account name",
 	"register.accountnamereq":"Account name is required",
@@ -81,6 +84,7 @@
 	"login.rememberme":" Remember me",
 	"login.forgetpassword":"Forget password",
 	"login.submit":"Login",
+	"login.notcredential":" Login or password not credential ",
 	"forgot.loginnotfound":" Login name does not exist, please check it",
 	"forgot.createnewpassword":" Create new password " ,
 	"forgot.note":" Please provide an email address or phone number that you used when you signed up for your Evernote account.",
@@ -155,6 +159,11 @@
 	"accountproduct.addnotallow":"The product has been added before, does not allow for duplication",
 	"accountproduct.productaddedtemporary":"this product has been added temporarily until its prices are modified",
 	"accountproduct.accountproductmenu":" My Products",
+	"accountproduct.serial":"Index",
+	"accountproduct.unit_name":" Unit Name ",
+	"accountproduct.default_price":"Def. price",
+	"accountproduct.current_price":"Cur. price",
+
 
 
 	"accountoffer.off_set_activate":"Activate offer times",
@@ -168,9 +177,9 @@
 	"accountoffer.occasionimage":" Occasion logo ",
 	"accountoffer.regoffer":" Register offer ",
 	"accountoffer.unit":" Unit ",
-	"accountoffer.max_quan":" Maximum Quantity ",
-	"accountoffer.max_limit":" Maximum Limit ",
-	"accountoffer.discount_rate":" Discount rate ",
+	"accountoffer.max_quan":" Max. Quantity ",
+	"accountoffer.max_limit":" Max. Limit ",
+	"accountoffer.discount_rate":" Discount %",
 	"accountoffer.price":" Price ",
 	"accountoffer.o_price":" Offer Price ",
 	"accountoffer.save_offer_price":" register offer price ",
