--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -101,6 +101,20 @@
 	"newpassword.notmatch":"كلمتين المرور غير متطابقتين",
 	"newpassword.createnewpassword":"إنشاء كلمة مرور جديدة",
 
+	"uom.name":"إسم الوحدة",
+	"uom.length":"الطول",
+	"uom.width":"العرض",
+	"uom.height":"الإرتفاع",
+	"uom.volume":"الحجم",
+	"uom.weight":"الوزن",
+	"uom.barcode":"باركود",
+	"uom.freetext":"عنوان",
+	"uom.base_cost":"تكلفة.أ",
+	"uom.base_price":"سعر.أ",
+	"uom.reduce_per":"نسبة",
+	"uom.cost_price":"تكلفة",
+	"uom.price":"السعر",
+	"uom.price_auto":"تلقائى",
 	"product.name":" إسم الصنف",
 	"product.placeholername":"إكتب إسم الصنف ",
 	"product.namereq":"إسم الصنف مطلوب ",
