--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -104,6 +104,20 @@
 	"newpassword.notmatch":"The two passwords do not match",
 	"newpassword.createnewpassword":"Create new password",
     
+	"uom.name":"Unit Name",
+	"uom.length":"Length",
+	"uom.width":"Width",
+	"uom.height":"Height",
+	"uom.volume":"Volume",
+	"uom.weight":"Weight",
+	"uom.barcode":"Barcode",
+	"uom.freetext":"Label",
+	"uom.base_cost":"B.Cost",
+	"uom.base_price":"B.Price",
+	"uom.reduce_per":"percent",
+	"uom.cost_price":"Cost",
+	"uom.price":"Price",
+	"uom.price_auto":"Auto",
 	"_comment":" Product screen ",
 	"product.name":" Product name",
 	"product.placeholername":" Enter product name",
