--- a/src/assets/i18n/ar.json
+++ b/src/assets/i18n/ar.json
@@ -15,6 +15,8 @@
 	"app_menu.main":"الرئيسية",
 	"app_menu.main_list":" القائمة الرئيسية ",
 	"app_menu.account_profile":" الملف الشخصى ",
+	"app_menu.units_menu":" إعداد وحدات القياس ",
+	"app_menu.uom_group_menu": " مجموعات وحدات القياس",
 	"app_menu.group_menu":" إعداد المجموعات ",
 	"app_menu.category_menu":" إعداد الفئات ",
 	"app_menu.product_menu":" إعداد المنتجات ",
@@ -115,6 +117,7 @@
 	"uom.cost_price":"تكلفة",
 	"uom.price":"السعر",
 	"uom.price_auto":"تلقائى",
+	"uom.button_submit":"تحديث و حدة القياس",
 	"product.name":" إسم الصنف",
 	"product.placeholername":"إكتب إسم الصنف ",
 	"product.namereq":"إسم الصنف مطلوب ",
