--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,6 +17,8 @@
 	"app_menu.main":" Main ",
 	"app_menu.main_list":" Main menu ",
 	"app_menu.account_profile":" Account profile ",
+	"app_menu.units_menu":" Units of measuring ",
+	"app_menu.uom_group_menu": "UOM of Groups",
 	"app_menu.group_menu":" Groups ",
 	"app_menu.category_menu":" Gategories ",
 	"app_menu.product_menu":" Products ",
@@ -118,6 +120,7 @@
 	"uom.cost_price":"Cost",
 	"uom.price":"Price",
 	"uom.price_auto":"Auto",
+	"uom.button_submit":"Update UOM",
 	"_comment":" Product screen ",
 	"product.name":" Product name",
 	"product.placeholername":" Enter product name",
